# machine

./: .gitignore  .mcp.json  CLAUDE_INSTRUCTIONS.md  HANDOFF.md  README.md  TERMS.md  complaints.md  justfile  settings.json  target.md
.claude/: INSTRUCTIONS.md  plugin-settings.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: builder-agent.md  builder-plugin.md  builder-skill.md  default.md  drill.md  evaluator-active.md  expert-backend.md  expert-debug.md  expert-devops.md  expert-frontend.md  expert-performance.md  expert-refactoring.md  expert-security.md  (+12 more)
.machine/: agent.md  glossary.csv  improve.json  mine.json  personas.md  project.md  taskboard.json
.proj/: agent.md  glossary.csv  improve.json  personas.md  project.md
agents/: builder-agent.md  builder-skill.md  default.md  evaluator-active.md  expert-debug.md  expert-devops.md  expert-performance.md  expert-refactoring.md  manager-ddd.md  manager-spec.md  manager-strategy.md  manager-tdd.md  plan-auditor.md
board/: ATTRIBUTION.md  board.mjs  test.mjs
commands/: bootstrap.md
docs/: flow.md  protocol.md  psaido.md
hooks/: personas.mjs
hub/: Cargo.toml
hub/src/: board.rs  board_http.rs  board_ui.html  error.rs  machine.rs  main.rs  mesh.rs  mine.rs  registry.rs  server.rs  state.rs  ulid_gen.rs
hub/tests/: integration.rs
mesh/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mesh.mjs  test.mjs
mesh/src/: claims.rs  clock.rs  error.rs  lib.rs  main.rs  mcp.rs  messages.rs  records.rs  roster.rs  store.rs  types.rs
mesh/tests/: acceptance.rs
mine/: README.md
output-styles/: einstein.md  machine.md
rules/: coding-standards.md
scripts/: bootstrap.sh  graphify.mjs  machine.mjs  taskboard-resolve.sh
taskboard/: install.sh  launch.sh
(+259 files in other folders)
