[package]
name = "hub"
version = "0.4.0"
edition = "2021"
description = "hub — fleet inter-agent coordination daemon (kern's coordination sibling)"

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
